2006-11-10  Richard Hult  <richard@imendio.com>

	* configure.in: Fix name.

	* src/dh-base.c: (base_add_books_in_data_dir), (base_init_books),
	(dh_base_get): Remove the old non-xdg locations.

2006-08-23  Paolo Borelli  <pborelli@katamail.com>

	* src/dh-parser.c:
	* src/dh-window.c:
	* src/dh-search.c: Plug some memory leaks.

2006-08-18  Richard Hult  <richard@imendio.com>

	* src/dh-keyword-model.c: (keyword_model_get_column_type),
	* src/dh-link.c: (dh_link_get_is_deprecated),
	* src/dh-parser.c: (parser_start_node_cb):
	* src/dh-search.c: (dh_search_new, search_cell_data_func): Make
	deprecated keywords grey. Fixes bug #310542.

2006-08-17  Richard Hult  <richard@imendio.com>

	* src/dh-base.c: (base_add_books_in_data_dir), (base_init_books):
	* src/dh-parser.c: (parser_start_node_cb): Fix style and add
	parsing for the deprecated property.

2006-08-17  Richard Hult  <richard@imendio.com>

	* devhelp.desktop.in.in (_GenericName): Add generic name, fixes
	bug #349880 (Matthias Clasen).

2006-08-03  Richard Hult  <richard@imendio.com>

	* src/default-prefs-gecko-1-8.js: Comment out the document color
	setting for now, since it breaks on gecko < 1.9, bug #349229.

	* configure.in: Bump version.

2006-07-30  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* devhelp.schemas.in: fix schema entry for
	show_advanced_search_options to match the actual gconf key used in
	code (was show_advanced_options), fixes bug #349352.

2006-07-27  Richard Hult  <richard@imendio.com>

	* Release 0.12

2006-07-27  Christian Persch  <chpe@cvs.gnome.org>

	* src/default-prefs-gecko-1-8.js: Always use theme colours.
	Fixes bug #347967.

2006-07-27  Richard Hult  <richard@imendio.com>

	* src/dh-window.c: (window_activate_quit):
	* ui/window.ui: Add quit menu item, fixes bug #346786.

2006-05-20  Tristan Van Berkom <tvb@gnome.org>

	* src/dh-search.c:
	  o Added a search source distinction... to mark whether the
	    search string has been requested through the dh-search api