@@ -1,3 +1,7 @@
+2006-11-15  Richard Hult  <rhult@garlic>
+
+	* src/dh-preferences.c (dh_preferences_show_dialog): Fix warning.
+
 2006-11-10  Richard Hult  <richard@imendio.com>
 
 	* configure.in: Fix name.
